--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -67,24 +67,25 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
-    <hr>
-    <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
-        <button class="btn btn-info" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
-            <strong>Vote SQL Entries: </strong><span class="badge badge-danger">{{ voteSqlLen }} total votes</span>
-        </button>
-        <div class="collapse" id="votesCollapse">
-            {% for vote in votes %}
-            {% if vote.voteAvaliable %}
-            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
-                name='{{ vote.voteName }}'> <strong>{{ vote.voteName
-                    }}</strong> <span class="badge badge-danger">{{ vote.voteCount }} votes</span></div>
-            {% else %}
-            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
-                name='{{ vote.voteName }}' aria-disabled="true"> <strong>{{
-                    vote.voteName }}</strong> <span class="badge badge-danger">{{ vote.voteCount }} votes</span></div>
-            {% endif %}
-            {% endfor %}
+        <hr>
+        <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+            <button class="btn btn-info" data-toggle="collapse" data-target="#votesCollapse" aria-expanded="false"
+                aria-controls="votessCollapse" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+                <strong>Vote SQL Entries: </strong><span class="badge badge-danger">{{ voteSqlLen }} total votes</span>
+            </button>
+            <div class="collapse" id="votesCollapse">
+                {% for vote in votes %}
+                {% if vote.voteAvaliable %}
+                <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                    name='{{ vote.voteName }}'> <strong>{{ vote.voteName
+                        }}</strong> <span class="badge badge-success">{{ vote.voteCount }} votes</span></div>
+                {% else %}
+                <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                    name='{{ vote.voteName }}' aria-disabled="true"> <strong>{{
+                        vote.voteName }}</strong> <span class="badge badge-danger">{{ vote.voteCount }} votes</span></div>
+                {% endif %}
+                {% endfor %}
+            </div>
         </div>
     </div>
     </div>
